update last slide

--- a/nanopolish/nanopolish.html
+++ b/nanopolish/nanopolish.html
@@ -503,8 +503,9 @@
 
         <!-- =========== SLIDE 11 End =========== -->
         <section>
-            <a href="https://mbhall88.github.io/reveal_presentations/nanopolish/nanopolish.html" target="_blank">
-                <small>https://mbhall88.github.io/reveal_presentations/nanopolish/nanopolish.html</small>
+            <p>Slides available at</p>
+            <a href="https://mbhall88.github.io/reveal_presentations/nanopolish/nanopolish.html" target="_blank" id="slides_link">
+                https://mbhall88.github.io/reveal_presentations/nanopolish/nanopolish.html
             </a>
             <a class="github-button" href="https://github.com/mbhall88" data-size="large" aria-label="Follow @mbhall88 on GitHub">Follow @mbhall88</a>
             <a href="https://twitter.com/mbhall88?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mbhall88</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
